--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>новый топовый сайт</title>
+	<title>Sos</title>
 	<meta charset="utf-8">
-	<link 
-	rel="stylesheet" 
-	type="text/css" 
-	href="./assets/style.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/base.css">
 </head>
 <body>
 	
