--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
 	<title>Sos</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./assets/style/base.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/container.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/header.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/section.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/button.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/title.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/variables.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/burger.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/nav.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/img.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/circle.css">
 </head>
+
 <body>
-	
+	<section class="section -header">
+			<header class="header">
+				<img class="logo" src="./assets/img/smoll/logo.png" width="60px" height="60px">				
+				<nav class="nav">
+					<nav class="nav">
+						<h3 class="header__nav">main</h3>
+						<h3 class="header__nav">about</h3>
+						<h3 class="header__nav">features</h3>
+						<h3 class="header__nav">requirements</h3>
+						<h3 class="header__nav">quotes</h3>
+					</nav>
+
+					<h3 class="header__nav -none">ENG</h3>
+					<div class="nav_line"></div>
+					<img src="./assets/img/smoll/nav_icon.png" class="nav_icon">
+					<img src="./assets/img/smoll/nav_icon2.png" class="nav_icon">
+					<div class="burger">
+						<div class="burger__item -t"></div>
+						<div class="burger__item -m"></div> 
+						<div class="burger__item -b"></div> 
+					</div>
+				</nav>
+			</header>
+		<div class="container">
+			<div class="flex">
+				<div class="info">
+					<h1 class="title">SURVIVE AT ALL COSTS</h1>
+					<h2 class="subtitle">EXPERIENCE NEW SOCIAL BATTLE ROYALE GAME</h2>
+					<button class="button">Buy now on steam | $14.99</button>
+				</div>
+			</div>
+
+			<h4 class="scroll">THE STORY</h4>
+			<div class="flex -center"><img src="./assets/img/smoll/scroll-down.png" alt="" class="img -down"></div>
+			<div class="elips">
+				<div class="circle"></div>
+				<div class="circle -empty"></div>
+				<div class="circle -empty"></div>
+				<div class="circle -empty"></div>
+			</div>
+		</div>
+	</section>	
 </body>
 </html>
