--- a/index.html
+++ b/index.html
@@ -62,5 +62,18 @@
 			</div>
 		</div>
 	</section>	
+
+	<section class="section -about">
+		<div class="container -flex">
+			<div>
+				<h3 class="subtitle -margin">What is Sos?</h3>
+				<h2 class="title -smoll">SOCIAL BATTLE ROYALE GAME</h2>
+				<div class="line"></div>
+				<p class="text -smoll">Each round, you and 15 other contestants compete to escape a deadly island filled with monsters. The trick is: three people can survive. Will you run solo or form friendships with others to escape?</p>
+				<p class="text -smoll">Making the right decisions could be the difference between life and death.</p>
+			</div>
+			<img class="img -card" src="./assets/img/smoll/card.png">
+		</div>
+	</section>
 </body>
 </html>
