--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/style/nav.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/img.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/circle.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/elips.css">
 </head>
 
 <body>
@@ -73,6 +74,52 @@
 				<p class="text -smoll">Making the right decisions could be the difference between life and death.</p>
 			</div>
 			<img class="img -card" src="./assets/img/smoll/card.png">
+		</div>
+	</section>
+
+	<section class="section -features">
+		<div class="container -none">
+			<div class="content">
+				<div class="position">
+					<h3 class="subtitle -margin">WHAT'SO SPECIAL?</h3>
+					<h2 class="title -smoll">FEATURES</h2>
+						<div class="flex -smoll">
+							<div class="progres">
+								<div class="elips -all"></div>
+								<div class="nav_line -big"></div>
+								<div class="elips"></div>
+								<div class="elips"></div>
+							</div>
+							<div>
+								<h3 class="subtitle -margin -orenge">SURVIVE AT ALL COST</h3>
+								<p class="text -smoll -width">You heve 30 minutes to find a relic, signa for extraction, and grap one of three spots on the rescure chopper.</p>
+								<h3 class="subtitle -margin -orenge">CREATE ALLIES AND ENEMIES</h3>
+								<h3 class="subtitle -margin -orenge">IMPRESS THE AUDIENCE</h3>
+							</div>
+						</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<section class="section -table">
+		<div class="container">
+			<table>
+				<tr>
+				  <th><h3 class="subtitle -margin -orenge">OS:</h3>
+				  	<p class="text">Windows 7 64-bit only (No OSX support at this time)</p></th>
+				  <th><h3 class="subtitle -margin -orenge">PROCESSOR:</h3><p class="text">Intel Core 2 @2.4 GHZ or Athlon X2 @ 2.8 GHZ </p></th>
+				 </tr>
+				<tr>
+				  <td><h3 class="subtitle -margin -orenge">MEMORY:</h3><p class="text">8 GB RAM</p></td>
+				  <td><h3 class="subtitle -margin -orenge">STOREGE:</h3><p class="text">8 GB available spase</p></td>
+				</tr>
+
+				<tr>
+				  <td><h3 class="subtitle -margin -orenge">GRAPHICS:</h3><p class="text">NVIDIA GeForse GTX 660 2Gb or AND Radeon HD 7850 2Gb DirectX11 (Shader Model 5) </p></td>
+				</tr>
+			</table>
 		</div>
 	</section>
 </body>
