--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/style/img.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/circle.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/elips.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/card.css">
 </head>
 
 <body>
@@ -105,21 +106,54 @@
 
 	<section class="section -table">
 		<div class="container">
-			<table>
-				<tr>
-				  <th><h3 class="subtitle -margin -orenge">OS:</h3>
-				  	<p class="text">Windows 7 64-bit only (No OSX support at this time)</p></th>
-				  <th><h3 class="subtitle -margin -orenge">PROCESSOR:</h3><p class="text">Intel Core 2 @2.4 GHZ or Athlon X2 @ 2.8 GHZ </p></th>
-				 </tr>
-				<tr>
-				  <td><h3 class="subtitle -margin -orenge">MEMORY:</h3><p class="text">8 GB RAM</p></td>
-				  <td><h3 class="subtitle -margin -orenge">STOREGE:</h3><p class="text">8 GB available spase</p></td>
-				</tr>
+			<h2 class="subtitle -center">CAN MY COMPUTER RUN THIS GAME?</h2>
+			<h2 class="title -center">SYSTEM REQUIREMENTS</h2>
+			<div class="table">
+				<div class="string">
+					<div class="block">
+						<h3 class="subtitle -margin -orenge -none">OS:</h3>
+						<p class="text">Windows 7 64-bit only (No OSX support at this time)</p>
+					</div>
+					<div class="block">
+						<h3 class="subtitle -margin -orenge -none">PROCESOR:</h3>
+						<p class="text">Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ</p>
+					</div>
+				</div>
+				<div class="string">
+					<div class="block">
+						<h3 class="subtitle -margin -orenge -none">MEMORY:</h3>
+						<p class="text">8 GB RAM</p>
+					</div>
+					<div class="block">
+						<h3 class="subtitle -margin -orenge -none">STOREGE:</h3>
+						<p class="text">8 GB available spase</p>
+					</div>
+				</div>
+				<div class="string">
+					<div class="block -big">
+						<h3 class="subtitle -margin -orenge -none">GRAPHICS:</h3>
+						<p class="text -all">NVIDIA GeForce GTX 660 2GB or AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-				<tr>
-				  <td><h3 class="subtitle -margin -orenge">GRAPHICS:</h3><p class="text">NVIDIA GeForse GTX 660 2Gb or AND Radeon HD 7850 2Gb DirectX11 (Shader Model 5) </p></td>
-				</tr>
-			</table>
+	<section class="section -quotes">
+		<div class="container -flex">
+			<div>
+				<h2 class="subtitle -margin">WHAT PEOPLE THINK?</h2>
+				<h2 class="title -margin">PRES QUOTES</h2>
+				<p class="text -smoll -margin">Our goal is to create a product and service that you're satisfied with and use it every day. This is why we're constantly working on our services to make it better every day and really listen to what our users has to say.</p>
+
+				<button class="button">Read more testimonials</button>
+			</div>
+
+			<div class="width">
+				<div class="card -t"></div>
+				<div class="card -c"></div>
+				<div class="card -b"></div>
+			</div>
 		</div>
 	</section>
 </body>
