--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 	<section class="section -header">
 			<header class="header">
-				<img class="logo" src="./assets/img/smoll/logo.png" width="60px" height="60px">				
+				<img class="logo" src="./assets/img/small/logo.png" width="60px" height="60px">				
 				<nav class="nav">
 					<nav class="nav">
 						<h3 class="header__nav">main</h3>
@@ -36,8 +36,8 @@
 
 					<h3 class="header__nav -none">ENG</h3>
 					<div class="nav_line"></div>
-					<img src="./assets/img/smoll/nav_icon.png" class="nav_icon">
-					<img src="./assets/img/smoll/nav_icon2.png" class="nav_icon">
+					<img src="./assets/img/small/nav_icon.png" class="nav_icon">
+					<img src="./assets/img/small/nav_icon2.png" class="nav_icon">
 					<div class="burger">
 						<div class="burger__item -t"></div>
 						<div class="burger__item -m"></div> 
@@ -55,7 +55,7 @@
 			</div>
 
 			<h4 class="scroll">THE STORY</h4>
-			<div class="flex -center"><img src="./assets/img/smoll/scroll-down.png" alt="" class="img -down"></div>
+			<div class="flex -center"><img src="./assets/img/small/scroll-down.png" alt="" class="img -down"></div>
 			<div class="elips">
 				<div class="circle"></div>
 				<div class="circle -empty"></div>
@@ -69,12 +69,12 @@
 		<div class="container -flex">
 			<div>
 				<h3 class="subtitle -margin">What is Sos?</h3>
-				<h2 class="title -smoll">SOCIAL BATTLE ROYALE GAME</h2>
+				<h2 class="title -small">SOCIAL BATTLE ROYALE GAME</h2>
 				<div class="line"></div>
-				<p class="text -smoll">Each round, you and 15 other contestants compete to escape a deadly island filled with monsters. The trick is: three people can survive. Will you run solo or form friendships with others to escape?</p>
-				<p class="text -smoll">Making the right decisions could be the difference between life and death.</p>
+				<p class="text -small">Each round, you and 15 other contestants compete to escape a deadly island filled with monsters. The trick is: three people can survive. Will you run solo or form friendships with others to escape?</p>
+				<p class="text -small">Making the right decisions could be the difference between life and death.</p>
 			</div>
-			<img class="img -card" src="./assets/img/smoll/card.png">
+			<img class="img -card" src="./assets/img/small/card.png">
 		</div>
 	</section>
 
@@ -83,8 +83,8 @@
 			<div class="content">
 				<div class="position">
 					<h3 class="subtitle -margin">WHAT'SO SPECIAL?</h3>
-					<h2 class="title -smoll">FEATURES</h2>
-						<div class="flex -smoll">
+					<h2 class="title -small">FEATURES</h2>
+						<div class="flex -small">
 							<div class="progres">
 								<div class="elips -all"></div>
 								<div class="nav_line -big"></div>
@@ -93,7 +93,7 @@
 							</div>
 							<div>
 								<h3 class="subtitle -margin -orenge">SURVIVE AT ALL COST</h3>
-								<p class="text -smoll -width">You heve 30 minutes to find a relic, signa for extraction, and grap one of three spots on the rescure chopper.</p>
+								<p class="text -small -width">You heve 30 minutes to find a relic, signa for extraction, and grap one of three spots on the rescure chopper.</p>
 								<h3 class="subtitle -margin -orenge">CREATE ALLIES AND ENEMIES</h3>
 								<h3 class="subtitle -margin -orenge">IMPRESS THE AUDIENCE</h3>
 							</div>
@@ -140,19 +140,46 @@
 	</section>
 
 	<section class="section -quotes">
-		<div class="container -flex">
-			<div>
-				<h2 class="subtitle -margin">WHAT PEOPLE THINK?</h2>
-				<h2 class="title -margin">PRES QUOTES</h2>
-				<p class="text -smoll -margin">Our goal is to create a product and service that you're satisfied with and use it every day. This is why we're constantly working on our services to make it better every day and really listen to what our users has to say.</p>
+		<div class="container -flex -small">
+			<div class="width">
+				<h2 class="subtitle -margin -right">WHAT PEOPLE THINK?</h2>
+				<h2 class="title -margin -right">PRES QUOTES</h2>
+				<p class="text -small -margin -right">Our goal is to create a product and service that you're satisfied with and use it every day. This is why we're constantly working on our services to make it better every day and really listen to what our users has to say.</p>
 
 				<button class="button">Read more testimonials</button>
 			</div>
 
-			<div class="width">
-				<div class="card -t"></div>
-				<div class="card -c"></div>
-				<div class="card -b"></div>
+			<div>
+				<div class="card -t">
+					<div class="flex -small -jk">
+						<div class="flex -small -jk">
+							<div class="avatar"></div>
+							<div>
+								<h3 class="subtitle -margin -orenge -none -block">EVAN LAHTI</h3>
+								<p class="text -gray">PC Gamer</p>
+							</div>
+						</div>
+
+						<img src="./assets/img/small/twitter.png" alt="" class="twiter">
+					</div>
+					<p class="text -top">"One of my gaming highlights of the year."</p>
+					<p class="text -gray">October 18, 2018</p>
+				</div>
+				<div class="card -c">
+					<div class="flex">
+						<div class="bg -img"></div>
+						<div>
+							
+						</div>
+					</div>
+
+				</div>
+				<div class="card -b">
+					<div class="flex">
+						<div class="bg -img"></div>
+						<div></div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
