--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 
 	<section class="section -quotes">
 		<div class="container -flex -small">
-			<div class="width">
-				<h2 class="subtitle -margin -right">WHAT PEOPLE THINK?</h2>
-				<h2 class="title -margin -right">PRES QUOTES</h2>
-				<p class="text -small -margin -right">Our goal is to create a product and service that you're satisfied with and use it every day. This is why we're constantly working on our services to make it better every day and really listen to what our users has to say.</p>
+				<div class="width">
+					<h2 class="subtitle -margin -right">WHAT PEOPLE THINK?</h2>
+					<h2 class="title -margin -right">PRES QUOTES</h2>
+					<p class="text -small -margin -right">Our goal is to create a product and service that you're satisfied with and use it every day. This is why we're constantly working on our services to make it better every day and really listen to what our users has to say.</p>
 
-				<button class="button">Read more testimonials</button>
-			</div>
+					<button class="button">Read more testimonials</button>
+				</div>
 
 			<div>
 				<div class="card -t">
@@ -156,29 +156,45 @@
 							<div class="avatar"></div>
 							<div>
 								<h3 class="subtitle -margin -orenge -none -block">EVAN LAHTI</h3>
-								<p class="text -gray">PC Gamer</p>
+								<p class="text -gray -none">PC Gamer</p>
 							</div>
 						</div>
 
 						<img src="./assets/img/small/twitter.png" alt="" class="twiter">
 					</div>
 					<p class="text -top">"One of my gaming highlights of the year."</p>
-					<p class="text -gray">October 18, 2018</p>
+					<p class="text -gray ">October 18, 2018</p>
 				</div>
 				<div class="card -c">
-					<div class="flex">
-						<div class="bg -img"></div>
-						<div>
-							
+					<div class="flex -small -jk">
+						<div class="flex -small -jk">
+							<div class="avatar"></div>
+							<div>
+								<h3 class="subtitle -margin -orenge -none -block">AARON WILLIAMS </h3>
+								<p class="text -gray -none">Uproxx</p>
+							</div>
 						</div>
-					</div>
 
-				</div>
-				<div class="card -b">
-					<div class="flex">
-						<div class="bg -img"></div>
-						<div></div>
+						<img src="./assets/img/small/twitter.png" alt="" class="twiter">
 					</div>
+					<p class="text -top">"Snoop Dogg Playing The Wildly Entertaining 'SOS' Is Ridiculous."</p>
+					<p class="text -gray ">December 24, 2018</p>
+				</div>
+
+				<div class="card -b">
+					<div class="flex -small -jk">
+						<div class="flex -small -jk">
+							<div class="avatar"></div>
+							<div>
+								<h3 class="subtitle -margin -orenge -none -block">JADA GRIFIN</h3>
+								<p class="text -gray -none">Nerdreactor</p>
+							</div>
+						</div>
+
+						<img src="./assets/img/small/twitter.png" alt="" class="twiter">
+					</div>
+					<p class="text -top">"The nextdig things in the world streaming and survival games."</p>
+					<p class="text -gray ">December 21, 2018</p>
 				</div>
 			</div>
 		</div>
