--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
 
 						<img src="./assets/img/small/twitter.png" alt="" class="twiter">
 					</div>
-					<p class="text -top">"One of my gaming highlights of the year."</p>
+					<p class="text -top">"One of my gaming highlights of the year. Best geme."</p>
 					<p class="text -gray ">October 18, 2018</p>
 				</div>
 				<div class="card -c">
 					<div class="flex -small -jk">
 						<div class="flex -small -jk">
-							<div class="avatar"></div>
+							<div class="avatar -n2"></div>
 							<div>
 								<h3 class="subtitle -margin -orenge -none -block">AARON WILLIAMS </h3>
 								<p class="text -gray -none">Uproxx</p>
@@ -184,7 +184,7 @@
 				<div class="card -b">
 					<div class="flex -small -jk">
 						<div class="flex -small -jk">
-							<div class="avatar"></div>
+							<div class="avatar -n3"></div>
 							<div>
 								<h3 class="subtitle -margin -orenge -none -block">JADA GRIFIN</h3>
 								<p class="text -gray -none">Nerdreactor</p>
