--- a/index.html
+++ b/index.html
@@ -199,5 +199,11 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="section -black">
+		<h1 class="title">
+			Вика Лоххх!!
+		</h1>
+	</section>
 </body>
 </html>
