--- a/index.html
+++ b/index.html
@@ -56,12 +56,7 @@
 
 			<h4 class="scroll">THE STORY</h4>
 			<div class="flex -center"><img src="./assets/img/small/scroll-down.png" alt="" class="img -down"></div>
-			<div class="elips">
-				<div class="circle"></div>
-				<div class="circle -empty"></div>
-				<div class="circle -empty"></div>
-				<div class="circle -empty"></div>
-			</div>
+		
 		</div>
 	</section>	
 
@@ -200,10 +195,23 @@
 		</div>
 	</section>
 
-	<section class="section -black">
-		<h1 class="title">
-			Вика Лоххх!!
-		</h1>
+	<section class="section -subscribe">
+			<div class="container -none">
+				<div class="content -height">
+					<div class="position -width">
+						<h3 class="subtitle -margin">WANT TO SAY IN TOUCH?</h3>
+						<h2 class="title -small">NEWSLETTER SUBSCRIBE</h2>
+						<p class="text">In order to start receiving our news, all you have to do is enter your email address. Everything else will be taken care of by us. We will send you emails containing information about game. We don't spam.</p>
+						<div class="flex -small -jk">
+							<button class="button -gray -big">
+									<p class="text -gray -margin">Your email addres</p>
+									<p class="text -oreng">ztvsfvfdvdza@yandex.ru</p>
+							</button>
+							<button class="button -big">Subscribe now</button>
+						</div>
+					</div>
+				</div>
+			</div>
 	</section>
 </body>
 </html>
