--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="./assets/style/circle.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/elips.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/card.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/footer.css">
 </head>
 
 <body>
@@ -202,7 +203,7 @@
 						<h3 class="subtitle -margin">WANT TO SAY IN TOUCH?</h3>
 						<h2 class="title -small">NEWSLETTER SUBSCRIBE</h2>
 						<p class="text">In order to start receiving our news, all you have to do is enter your email address. Everything else will be taken care of by us. We will send you emails containing information about game. We don't spam.</p>
-						<div class="flex -small -jk">
+						<div class="flex -small -jk -height">
 							<button class="button -gray -big">
 									<p class="text -gray -margin">Your email addres</p>
 									<p class="text -oreng">ztvsfvfdvdza@yandex.ru</p>
@@ -213,5 +214,32 @@
 				</div>
 			</div>
 	</section>
+
+	<footer class="footer">			
+				<nav class="nav -flex">
+					<img class="logo" src="./assets/img/small/logo.png" width="60px" height="60px">	
+					<nav class="nav">
+						<h3 class="header__nav -margin -none">MAIN</h3>
+						<h3 class="header__nav -margin -none">ABOUT</h3>
+						<h3 class="header__nav -margin -none">GAME FEATURES</h3>
+						<h3 class="header__nav -margin -none">SYSTEM REQUIREMENTS</h3>
+						<h3 class="header__nav -margin -none">QUOTES</h3>
+					</nav>
+
+					<div class="nav -img">
+						<img class="img -footer -margin -smoll" src="./assets/img/facebook.png">
+						<img class="img -footer -margin" src="./assets/img/twitter.png">
+						<img class="img -footer -margin" src="./assets/img/Vector.png">
+						<img class="img -footer -margin" src="./assets/img/twitch.png">	
+					</div>
+				</nav>
+
+				<div class="nav -block">
+					<img class="img -footer -margin -smoll" src="./assets/img/facebook.png">
+					<img class="img -footer -margin" src="./assets/img/twitter.png">
+					<img class="img -footer -margin" src="./assets/img/Vector.png">
+					<img class="img -footer -margin" src="./assets/img/twitch.png">	
+				</div>
+	</footer>
 </body>
 </html>
