--- a/index.html
+++ b/index.html
@@ -215,15 +215,18 @@
 			</div>
 	</section>
 
-	<footer class="footer">			
+	<footer class="footer">
+			<nav class="nav -flex">
+				<img class="logo -block" src="./assets/img/small/logo.png" width="60px" height="60px">	
+			</nav>
 				<nav class="nav -flex">
-					<img class="logo" src="./assets/img/small/logo.png" width="60px" height="60px">	
+					<img class="logo -none" src="./assets/img/small/logo.png" width="60px" height="60px">	
 					<nav class="nav">
 						<h3 class="header__nav -margin -none">MAIN</h3>
 						<h3 class="header__nav -margin -none">ABOUT</h3>
-						<h3 class="header__nav -margin -none">GAME FEATURES</h3>
-						<h3 class="header__nav -margin -none">SYSTEM REQUIREMENTS</h3>
-						<h3 class="header__nav -margin -none">QUOTES</h3>
+						<h3 class="header__nav -margin -none -right">GAME FEATURES</h3>
+						<h3 class="header__nav -margin -none -block">SYSTEM REQUIREMENTS</h3>
+						<h3 class="header__nav -margin -none -block">QUOTES</h3>
 					</nav>
 
 					<div class="nav -img">
@@ -232,6 +235,11 @@
 						<img class="img -footer -margin" src="./assets/img/Vector.png">
 						<img class="img -footer -margin" src="./assets/img/twitch.png">	
 					</div>
+				</nav>
+
+				<nav class="nav -block -none">
+					<h3 class="header__nav -margin -none">SYSTEM REQUIREMENTS</h3>
+					<h3 class="header__nav -margin -none">QUOTES</h3>
 				</nav>
 
 				<div class="nav -block">
