--- a/index.html
+++ b/index.html
@@ -215,12 +215,13 @@
 			</div>
 	</section>
 
-	<footer class="footer">
-			<nav class="nav -flex">
-				<img class="logo -block" src="./assets/img/small/logo.png" width="60px" height="60px">	
-			</nav>
-				<nav class="nav -flex">
-					<img class="logo -none" src="./assets/img/small/logo.png" width="60px" height="60px">	
+	<footer>
+		<div class="footer">
+				<nav class="nav -flex -n1">
+					<img class="logo -block -big" src="./assets/img/small/logo.png" width="60px" height="60px">	
+				</nav>
+				<img class="logo -none -big" src="./assets/img/small/logo.png" width="60px" height="60px">
+				<nav class="nav -flex">	
 					<nav class="nav">
 						<h3 class="header__nav -margin -none">MAIN</h3>
 						<h3 class="header__nav -margin -none">ABOUT</h3>
@@ -248,6 +249,18 @@
 					<img class="img -footer -margin" src="./assets/img/Vector.png">
 					<img class="img -footer -margin" src="./assets/img/twitch.png">	
 				</div>
+		</div>
+
+		<div class="line -gray"></div>
+
+		<div class="footer">
+			<p class="text -gray -center">@ 2018 Outpost Games, Inc. All Rights Reserved</p>
+			<div class="nav -center -none">
+				<h3 class="header__nav -margin -none -right -center">PRIVACY POLICY</h3>
+				<h3 class="header__nav -margin -none -right -center">| TERMS OF SERVICES |</h3>
+				<h3 class="header__nav -margin -none -right -center">CODE OF CONDUCT</h3>
+			</div>
+		</div>
 	</footer>
 </body>
 </html>
