--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="./img/smoll/logo.png">
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="./assets/style/base.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/container.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/header.css">
@@ -20,6 +22,9 @@
 	<link rel="stylesheet" type="text/css" href="./assets/style/elips.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/card.css">
 	<link rel="stylesheet" type="text/css" href="./assets/style/footer.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/text.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/flex.css">
+	<link rel="stylesheet" type="text/css" href="./assets/style/features.css">
 </head>
 
 <body>
@@ -81,17 +86,17 @@
 					<h3 class="subtitle -margin">WHAT'SO SPECIAL?</h3>
 					<h2 class="title -small">FEATURES</h2>
 						<div class="flex -small">
-							<div class="progres">
-								<div class="elips -all"></div>
-								<div class="nav_line -big"></div>
-								<div class="elips"></div>
-								<div class="elips"></div>
-							</div>
-							<div>
-								<h3 class="subtitle -margin -orenge">SURVIVE AT ALL COST</h3>
-								<p class="text -small -width">You heve 30 minutes to find a relic, signa for extraction, and grap one of three spots on the rescure chopper.</p>
-								<h3 class="subtitle -margin -orenge">CREATE ALLIES AND ENEMIES</h3>
-								<h3 class="subtitle -margin -orenge">IMPRESS THE AUDIENCE</h3>
+							<div class="features">
+								<div class="feature -active">
+									<h3 class="subtitle -margin -orenge">SURVIVE AT ALL COST</h3>
+									<p class="text -small -width">You heve 30 minutes to find a relic, signa for extraction, and grap one of three spots on the rescure chopper.</p>
+								</div>
+								<div class="feature">
+									<h3 class="subtitle -margin -orenge">CREATE ALLIES AND ENEMIES</h3>
+								</div>
+								<div class="feature">
+									<h3 class="subtitle -margin -orenge">IMPRESS THE AUDIENCE</h3>
+								</div>
 							</div>
 						</div>
 				</div>
@@ -142,7 +147,7 @@
 					<h2 class="title -margin -right">PRES QUOTES</h2>
 					<p class="text -small -margin -right">Our goal is to create a product and service that you're satisfied with and use it every day. This is why we're constantly working on our services to make it better every day and really listen to what our users has to say.</p>
 
-					<button class="button">Read more testimonials</button>
+					<button class="button -big">Read more testimonials</button>
 				</div>
 
 			<div>
